Cleanup and Affine plane implementation